2004-05-06  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/auth.c: Don't use non-eCos <paths.h>
	* src/pppd.c: Don't use non-eCos <sys/wait.h> and <sys/resource.h>
	* src/sys-ecos.c: netmask must be extern - not all tools have
	COMMON section support.

2004-04-15  Oyvind Harboe <oyvind.harboe@zylin.com>

	* src/chat.c: Script now returns success when it runs to completion

2004-03-31  John Dallaway  <jld@ecoscentric.com>

	* cdl/ppp.cdl: Correct capitalisation in display strings.

2004-03-24  Nick Garnett  <nickg@ecoscentric.com>

	* cdl/ppp.cdl: Add CYGPKG_PPP_DEBUG_WARN_ONLY option to control
	which syslog() messages actually get printed.

	* include/ppp.h: Widen kdebugflag option to 5 bits.

	* src/ppp_io.c: Converted some db_printf() calls to diag_printf().

	* src/sys-ecos.c: Delay return of cyg_ppp_wait_up() until IP
	addresses have been set. Add ifdef for CYGPKG_PPP_DEBUG_WARN_ONLY
	to syslog().

	* doc/ppp.sgml: Added documentation of CYGPKG_PPP_DEBUG_WARN_ONLY
	option. Improved documentation of kdebugflag runtime option.

2004-01-09  John Dallaway  <jld@ecoscentric.com>

	* cdl/ppp.cdl: Fix typographical error.

2004-01-08  Nick Garnett  <nickg@ecoscentric.com>

	* tests/test_server.sh: Added a dbecho of the PPPD command line.

2003-12-23  Nick Garnett  <nickg@ecoscentric.com>

	* doc/ppp.sgml: Added A&M Adder boards to list of those that
	support hardware flow control.

2003-12-22  Nick Garnett  <nickg@ecoscentric.com>

	* src/pppd.c (vfmtmsg): Disabled PowerPC-specific ifndef, we don't
	have the differences in va_list that this is coping with.

2003-11-12  John Dallaway  <jld@ecoscentric.com>

	* doc/ppp.sgml: Addition comments concerning serial flow control from
	Nick Garnett.

2003-10-10  John Dallaway  <jld@ecoscentric.com>

	* doc/ppp.sgml: Fix documentation build error.

2003-09-25  Nick Garnett  <nickg@ecoscentric.com>

	* src/magic.c (magic_init): Added pseudo-pid to seed
	initialization to add some variety.

	* include/pppd.h: 