@@ -1,3 +1,12 @@
+2004-05-06  Mark Retallack <mark.retallack@siemens.com>
+
+	* src/ppp_io.c: 
+	* src/sys-ecos.c: 	
+	* src/ppp_io.h:	
+	The wait_input function sometimes blocked even if a packet was
+	available for processing. Now checks the tty queue and then the 
+	serial driver before blocking.
+
 2004-05-06  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* src/auth.c: Don't use non-eCos <paths.h>
